--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   frontend:
     build:
-      context: ./frontend  # Path to the directory containing the frontend Dockerfile
+      context: ./public  # Path to the directory containing the frontend Dockerfile
     ports:
       - "80:3000"  # Map port 3000 of the frontend container to port 80 on the host (accessible via VPN)
     networks:
@@ -10,7 +10,7 @@ services:
 
   backend:
     build:
-      context: ./backend  # Path to the directory containing the backend Dockerfile
+      context: ./server  # Path to the directory containing the backend Dockerfile
     ports:
       - "5000:5000"  # Map port 5000 of the backend container to port 5000 on the host
     networks:
