"changed nginx name"

--- a/nginx/chat_app.conf
+++ b/nginx/chat_app.conf
@@ -3,12 +3,12 @@ server {
     server_name 10.100.0.53; # Replace with your VM's IP address or domain name
 
     location / {
-        proxy_pass http://public:3000; # Points to the frontend container defined in docker-compose.yml
+        proxy_pass http://frontend:3000; # Points to the frontend container defined in docker-compose.yml
         
     }
 
     location /api {
-        proxy_pass http://server:5000; # Points to the backend container defined in docker-compose.yml
+        proxy_pass http://backend:5000; # Points to the backend container defined in docker-compose.yml
         
     }
 }
