--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - backend
     networks:
-      - chat_app_network
+      - slut_chat_app_network
 
   backend:
     build:
@@ -19,7 +19,9 @@ services:
       - PORT:5000
       - MONGO_URL=mongodb+srv://martinbergkvist13:campus09@test.yy3xqvh.mongodb.net/?retryWrites=true&w=majority
     networks:
-      - chat_app_network
+      - slut_chat_app_network
       
 networks:
-  chat_app_network:
+  slut_chat_app_network:
+    external:
+      name: slut_chat_app_network
