"changed the rest"

--- a/nginx/chat_app.conf
+++ b/nginx/chat_app.conf
@@ -1,14 +1,19 @@
-server {
-    listen 0.0.0.0:8080;
-    server_name 10.100.0.53; # Replace with your VM's IP address or domain name
+worker_processes 1;
 
-    location / {
-        proxy_pass http://frontend:3000; # Points to the frontend container defined in docker-compose.yml
-        
-    }
+events { worker_connections 1024; }
 
-    location /api {
-        proxy_pass http://backend:5000; # Points to the backend container defined in docker-compose.yml
-        
+http {
+    sendfile on;
+
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://frontend:3000;
+        }
+
+        location /api/ {
+            proxy_pass http://backend:5000;
+        }
     }
 }
