--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,12 @@
-worker_processes 1;
+server {
+    listen 80;
+    server_name localhost;
 
-events { worker_connections 1024; }
+    location / {
+        proxy_pass http://frontend:3000;
+    }
 
-http {
-    sendfile on;
-
-    server {
-        listen 80;
-
-        location / {
-            proxy_pass http://frontend:3000;
-        }
-
-        location /api/ {
-            proxy_pass http://backend:5000;
-        }
+    location /api/ {
+        proxy_pass http://backend:5000;
     }
 }
