--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,7 +5,8 @@ FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Copy custom NGINX configuration to the container's NGINX configuration directory
-COPY nginx.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Expose port 80
 EXPOSE 80
+
