--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,16 @@
-server {
-    listen 80;
-    server_name localhost;
+events {}
 
-    location / {
-        proxy_pass http://frontend:3000;
-    }
+http {
+    server {
+        listen 80;
+        server_name localhost;
 
-    location /api/ {
-        proxy_pass http://backend:5000;
+        location / {
+            proxy_pass http://frontend:3000;
+        }
+
+        location /api/ {
+            proxy_pass http://backend:5000;
+        }
     }
 }
