--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,14 +7,14 @@ RUN apt-get update && apt-get install -y mongodb-clients
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy requirements.txt to the working directory
-COPY requirements.txt ./
+# Copy backend files
+COPY backend/ ./
+
+# Install backend dependencies using environment variables
+ENV MONGO_URL="mongodb+srv://martinbergkvist13:campus09@test.yy3xqvh.mongodb.net/?retryWrites=true&w=majority"
 
 # Install backend dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy all files to the container's working directory
-COPY . .
+RUN pip install --no-cache-dir pymongo flask
 
 # Set the command to start the backend
 CMD ["python", "app.py"]
