--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y mongodb-clients
 WORKDIR /app
 
 # Copy all files from the 'server' directory to the container's working directory
-COPY ./server/ .
+COPY . .
 
 # Install backend dependencies using environment variables
 ENV MONGO_URL="mongodb+srv://martinbergkvist13:campus09@test.yy3xqvh.mongodb.net/?retryWrites=true&w=majority"
