--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,17 +1,20 @@
-# Use an official Node runtime as the base image
-FROM node:14
+# Use the official Node.js image
+FROM node:latest
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy frontend files from the 'public' directory
-COPY public/ ./
+# Copy the package.json and package-lock.json files to the container
+COPY package*.json ./
 
 # Install frontend dependencies
 RUN npm install
 
-# Build the frontend
+# Copy all frontend source code to the container
+COPY . .
+
+# Build the frontend app
 RUN npm run build
 
-# Set the command to start the frontend
-CMD ["npm", "start"]
+# Set the command to start the frontend server
+CMD [ "npm", "start" ]
