--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     networks:
-      - chat_app_net
+      - slut_chat_app_net
 
   server:
     build:
@@ -18,7 +18,7 @@ services:
       - "5000:5000"
     
     networks:
-      - chat_app_net
+      - slut_chat_app_net
 
   nginx:
     image: nginx
@@ -27,9 +27,9 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - chat_app_net
+      - slut_chat_app_net
 
 networks:
-  chat_app_net:
+  slut_chat_app_net:
     driver: bridge
 
